Fix bug where device is resetting to cpu for Apple systems

--- a/fast/fast.ipynb
+++ b/fast/fast.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,10 +32,8 @@
     "import torch\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from datasets import Dataset, load_dataset\n",
-    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "from utils.feed_forward import FeedForward\n",
-    "from utils.cls import extract_cls_embeddings\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
     "\n",
     "# Set Device ##########################################################\n",
@@ -58,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,20 +173,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "param_grid = {\n",
     "    'num_epochs': [100],\n",
     "    'batch_size': [32, 128, 512],\n",
-    "    'learning_rate': [1e-2, 1e-3, 1e-4, 1e-5],\n",
+    "    'learning_rate': [1e-2,1e-4],\n",
     "    'category': ['C'],\n",
     "    'norm': [False],\n",
     "    'input_size': [768],\n",
-    "    'layer_size': [768],\n",
-    "    'num_layers': [1, 2, 3],\n",
-    "    'weight_decay':[1e-2, 1e-3, 1e-4, 1e-5],\n",
+    "    'layer_size': [192, 384, 768, 1536],\n",
+    "    'num_layers': [1, 3, 5, 7, 9],\n",
+    "    'weight_decay':[1e-2, 1e-4],\n",
     "    'patience': [3],\n",
     "    'min_delta': [0],\n",
     "    'device': [device_name]\n",
@@ -198,7 +196,7 @@
     "all_params = [dict(zip(param_grid.keys(), v)) for v in itertools.product(*param_grid.values())]\n",
     "\n",
     "best_params = None\n",
-    "highest_val_accuracy = 0"
+    "highest_val_mcc = 0"
    ]
   },
   {
@@ -236,15 +234,16 @@
     "    print(\"Validation accuracy:\", val_accuracy)\n",
     "    print(\"Validation f1-score:\", val_f1)\n",
     "    print(\"Validation MCC     :\", val_mcc)\n",
+    "    print(\"Best MCC so far    :\", highest_val_mcc)\n",
     "    \n",
     "    # Save the parameters if they provide a better accuracy\n",
-    "    if val_accuracy > highest_val_accuracy:\n",
-    "        highest_val_accuracy = val_accuracy\n",
+    "    if val_mcc > highest_val_mcc:\n",
+    "        highest_val_mcc = val_mcc\n",
     "        best_params = params\n",
     "\n",
     "# Print the best parameters\n",
     "print(\"\\nBest Parameters:\", best_params)\n",
-    "print(\"Highest Validation Accuracy:\", highest_val_accuracy)"
+    "print(\"Highest Validation MCC:\", highest_val_mcc)"
    ]
   },
   {
