Mean pooling example

--- a/fast/fast.ipynb
+++ b/fast/fast.ipynb
@@ -298,6 +298,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Mean Pooled Embeddings Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: transformers in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (4.35.0)\n",
+      "Requirement already satisfied: filelock in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (3.13.1)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.16.4 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (0.17.3)\n",
+      "Requirement already satisfied: numpy>=1.17 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (1.24.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (23.2)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (6.0.1)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (2023.10.3)\n",
+      "Requirement already satisfied: requests in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (2.31.0)\n",
+      "Requirement already satisfied: tokenizers<0.15,>=0.14 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (0.14.1)\n",
+      "Requirement already satisfied: safetensors>=0.3.1 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (0.4.0)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (4.66.1)\n",
+      "Requirement already satisfied: fsspec in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.16.4->transformers) (2023.6.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.16.4->transformers) (4.8.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from requests->transformers) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from requests->transformers) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from requests->transformers) (2.0.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from requests->transformers) (2023.7.22)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Embeddings: [[-0.00309106 -0.00176029 -0.00381204 ... -0.01621991 -0.00107355\n",
+      "   0.00249623]\n",
+      " [ 0.00124463  0.00778843 -0.00230429 ... -0.00839902 -0.00316125\n",
+      "  -0.00278425]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "from utils import mean_pooling\n",
+    "sentences = ['sentence@!!!!', 'yes']\n",
+    "# tokenizer = RobertaTokenizer.from_pretrained('distilroberta-base')\n",
+    "# model = RobertaModel.from_pretrained('distilroberta-base')\n",
+    "encoded_input = tokenizer(sentences, padding=True, truncation=True, return_tensors='pt')\n",
+    "with torch.no_grad():\n",
+    "    model_output = model(**encoded_input)\n",
+    "\n",
+    "# Pooling\n",
+    "sentence_embeddings = mean_pooling.mean_pooling(model_output, encoded_input['attention_mask'])\n",
+    "\n",
+    "print(\"Embeddings:\", sentence_embeddings)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Generate Embeddings for Sentence Transformers"
    ]
   },
