mean pooling setup for glue

--- a/fast/all_tasks.ipynb
+++ b/fast/all_tasks.ipynb
@@ -23,17 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda:0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# REQUIRED IMPORTS & SETUP\n",
     "\n",
@@ -56,6 +48,7 @@
     "\n",
     "from utils.feed_forward import FeedForward\n",
     "from utils.cls import extract_cls_embeddings\n",
+    "from utils.mean_pooling import mean_pooling\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
     "\n",
     "# Set Device ##########################################################\n",
@@ -153,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,33 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['question', 'sentence', 'label', 'idx'],\n",
-       "        num_rows: 104743\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['question', 'sentence', 'label', 'idx'],\n",
-       "        num_rows: 5463\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['question', 'sentence', 'label', 'idx'],\n",
-       "        num_rows: 5463\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = load_dataset(\"glue\", current_task)\n",
     "data"
@@ -256,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,17 +309,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of X_train: 8551\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = \"distilroberta\"  # rename to model name\n",
     "dataset = \"cola\"         # rename to dataset name\n",
@@ -375,6 +336,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Generate Mean Pooled Embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = data[\"train\"][\"sentence\"]\n",
+    "X_val = data[\"validation\"][\"sentence\"]\n",
+    "X_test = data[\"test\"][\"sentence\"]\n",
+    "\n",
+    "Y_train = data[\"train\"][\"label\"]\n",
+    "Y_val = data[\"validation\"][\"label\"]\n",
+    "Y_test = data[\"test\"][\"label\"]\n",
+    "\n",
+    "X_train = tokenizer(X_train, padding=True, truncation=True, return_tensors='pt')\n",
+    "X_val = tokenizer(X_val, padding=True, truncation=True, return_tensors='pt')\n",
+    "X_test = tokenizer(X_test, padding=True, truncation=True, return_tensors='pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    X_train = model(**X_train)\n",
+    "    X_val = model(**X_val)\n",
+    "    X_test = model(**X_test)\n",
+    "\n",
+    "X_train = mean_pooling(X_train, X_train['attention_mask'])\n",
+    "X_val = mean_pooling(X_val, X_val['attention_mask'])\n",
+    "X_test = mean_pooling(X_test, X_test['attention_mask'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = \"distilroberta\"  # rename to model name\n",
+    "dataset = \"cola\"         # rename to dataset name\n",
+    "\n",
+    "from pathlib import Path\n",
+    "Path(\"./output/mean_pooling\").mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "with open(f'./output/mean_pooling/X_train_{dataset}_{model}.npy', 'wb') as X_train_file:\n",
+    "    np.save(X_train_file, X_train)\n",
+    "with open(f'./output/mean_pooling/X_val_{dataset}_{model}.npy', 'wb') as X_val_file:\n",
+    "    np.save(X_val_file, X_val)\n",
+    "with open(f'./output/mean_pooling/X_test_{dataset}_{model}.npy', 'wb') as X_test_file:\n",
+    "    np.save(X_test_file, X_test)\n",
+    "with open(f'./output/mean_pooling/Y_train_{dataset}_{model}.npy', 'wb') as Y_train_file:\n",
+    "    np.save(Y_train_file, Y_train)\n",
+    "with open(f'./output/mean_pooling/Y_val_{dataset}_{model}.npy', 'wb') as Y_val_file:\n",
+    "    np.save(Y_val_file, Y_val)\n",
+    "with open(f'./output/mean_pooling/Y_test_{dataset}_{model}.npy', 'wb') as Y_test_file:\n",
+    "    np.save(Y_test_file, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = \"distilroberta\"  # rename to model name\n",
+    "dataset = \"cola\"         # rename to dataset name\n",
+    "\n",
+    "with open(f'./output/mean_pooling/X_train_{dataset}_{model}.npy', 'rb') as X_train_file:\n",
+    "    X_train = np.load(X_train_file)\n",
+    "with open(f'./output/mean_pooling/X_val_{dataset}_{model}.npy', 'rb') as X_val_file:\n",
+    "    X_val = np.load(X_val_file)\n",
+    "with open(f'./output/mean_pooling/X_test_{dataset}_{model}.npy', 'rb') as X_test_file:\n",
+    "    X_test = np.load(X_test_file)\n",
+    "with open(f'./output/mean_pooling/Y_train_{dataset}_{model}.npy', 'rb') as Y_train_file:\n",
+    "    Y_train = np.load(Y_train_file)\n",
+    "with open(f'./output/mean_pooling/Y_val_{dataset}_{model}.npy', 'rb') as Y_val_file:\n",
+    "    Y_val = np.load(Y_val_file)\n",
+    "with open(f'./output/mean_pooling/Y_test_{dataset}_{model}.npy', 'rb') as Y_test_file:\n",
+    "    Y_test = np.load(Y_test_file)\n",
+    "\n",
+    "print(f\"size of X_train: {len(X_train)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Generate Embeddings for Sentence Transformers"
    ]
   },
@@ -387,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,17 +513,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of X_train: 104743\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = \"distilroberta\"  # rename to model name\n",
     "\n",
@@ -506,17 +552,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "54 hyperparameter combinations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "param_grid = {\n",
     "    'num_epochs': [50],\n",
@@ -540,26 +578,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saving results to ./output/val_results_qnli_20231119_162009.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Best Acc: 0.75197, Last test: 0.73293: 100%|██████████| 54/54 [17:15<00:00, 19.18s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# setup for logging\n",
     "save_file_id = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
@@ -614,34 +637,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best accuracy: 0.87041\n",
-      "         mcc        f1  accuracy  num_epochs  batch_size  learning_rate  \\\n",
-      "9   0.741210  0.870857  0.870413          50          32          0.001   \n",
-      "11  0.740729  0.872891  0.870413          50          32          0.001   \n",
-      "30  0.741689  0.876232  0.870413          50         128          0.001   \n",
-      "47  0.740729  0.872891  0.870413          50         512          0.001   \n",
-      "\n",
-      "   category   norm  input_size  layer_size  num_layers  weight_decay  \\\n",
-      "9         C  False         768         768           1        0.0100   \n",
-      "11        C  False         768         768           1        0.0001   \n",
-      "30        C  False         768         768           2        0.0100   \n",
-      "47        C  False         768         768           1        0.0001   \n",
-      "\n",
-      "    patience  min_delta  device  \n",
-      "9          3          0  cuda:0  \n",
-      "11         3          0  cuda:0  \n",
-      "30         3          0  cuda:0  \n",
-      "47         3          0  cuda:0  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# results_df = pd.read_csv(results_filename)\n",
     "results_df = pd.read_csv(\"output/val_results_sst2_20231119_155630.csv\")\n",
