--- a/fast/fast.ipynb
+++ b/fast/fast.ipynb
@@ -16,17 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda:0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# REQUIRED IMPORTS & SETUP\n",
     "\n",
@@ -144,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,33 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 8551\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 1043\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 1063\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = load_dataset(\"glue\", \"cola\")\n",
     "data"
@@ -216,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,23 +210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "forward() got an unexpected keyword argument 'last_hidden_state'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/jnb5885/projectx/fast/fast.ipynb Cell 22\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/fast.ipynb#Y116sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# EXPENSIVE OPERATION: This cell may take about 2 minutes or more to run\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/fast.ipynb#Y116sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/fast.ipynb#Y116sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     X_train \u001b[39m=\u001b[39m model(\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mX_train)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/fast.ipynb#Y116sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     X_val \u001b[39m=\u001b[39m model(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mX_val)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/fast.ipynb#Y116sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m     X_test \u001b[39m=\u001b[39m model(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mX_test)\n",
-      "File \u001b[0;32m~/miniconda3/envs/fast/lib/python3.9/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/miniconda3/envs/fast/lib/python3.9/site-packages/transformers/adapters/context.py:108\u001b[0m, in \u001b[0;36mForwardContext.wrap.<locals>.wrapper_func\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    104\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mcls\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs) \u001b[39mas\u001b[39;00m ctx:\n\u001b[1;32m    105\u001b[0m     kwargs \u001b[39m=\u001b[39m {\n\u001b[1;32m    106\u001b[0m         k: v \u001b[39mfor\u001b[39;00m k, v \u001b[39min\u001b[39;00m kwargs\u001b[39m.\u001b[39mitems() \u001b[39mif\u001b[39;00m k\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39moutput_\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39mcontext_attributes\n\u001b[1;32m    107\u001b[0m     }\n\u001b[0;32m--> 108\u001b[0m     results \u001b[39m=\u001b[39m f(\u001b[39mself\u001b[39;49m, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    110\u001b[0m     \u001b[39m# append output attributes\u001b[39;00m\n\u001b[1;32m    111\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(results, \u001b[39mtuple\u001b[39m):\n",
-      "\u001b[0;31mTypeError\u001b[0m: forward() got an unexpected keyword argument 'last_hidden_state'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# EXPENSIVE OPERATION: This cell may take about 2 minutes or more to run\n",
     "\n",
@@ -281,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,17 +268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of X_train: 8551\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = \"distilroberta\"  # rename to model name\n",
     "dataset = \"cola\"         # rename to dataset name\n",
@@ -354,42 +300,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: transformers in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (4.35.0)\n",
-      "Requirement already satisfied: filelock in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (3.13.1)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.16.4 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (0.17.3)\n",
-      "Requirement already satisfied: numpy>=1.17 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (1.24.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (23.2)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (6.0.1)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (2023.10.3)\n",
-      "Requirement already satisfied: requests in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (2.31.0)\n",
-      "Requirement already satisfied: tokenizers<0.15,>=0.14 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (0.14.1)\n",
-      "Requirement already satisfied: safetensors>=0.3.1 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (0.4.0)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from transformers) (4.66.1)\n",
-      "Requirement already satisfied: fsspec in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.16.4->transformers) (2023.6.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.16.4->transformers) (4.8.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from requests->transformers) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from requests->transformers) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from requests->transformers) (2.0.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/michellezhang/miniconda3/envs/projectx/lib/python3.9/site-packages (from requests->transformers) (2023.7.22)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Embeddings: [[-0.00309106 -0.00176029 -0.00381204 ... -0.01621991 -0.00107355\n",
-      "   0.00249623]\n",
-      " [ 0.00124463  0.00778843 -0.00230429 ... -0.00839902 -0.00316125\n",
-      "  -0.00278425]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "from utils import mean_pooling\n",
+    "from utils.mean_pooling import mean_pooling\n",
     "sentences = ['sentence@!!!!', 'yes']\n",
     "# tokenizer = RobertaTokenizer.from_pretrained('distilroberta-base')\n",
     "# model = RobertaModel.from_pretrained('distilroberta-base')\n",
@@ -419,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,17 +392,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of X_train: 8551\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = \"distilroberta\"  # rename to model name\n",
     "dataset = \"cola\"         # rename to dataset name\n",
@@ -525,17 +432,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "162 hyperparameter combinations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "param_grid = {\n",
     "    'num_epochs': [50],\n",
