all binary task configs written and tested

--- a/fast/all_tasks.ipynb
+++ b/fast/all_tasks.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -111,9 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.layer_norm.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.weight', 'lm_head.bias', 'lm_head.dense.bias']\n",
+      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import RobertaTokenizer, RobertaModel\n",
     "tokenizer = RobertaTokenizer.from_pretrained('distilroberta-base')\n",
@@ -136,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,9 +196,11 @@
     "    \"mrpc\": TaskConfig(\"two\", \"binary\", 768*2, ['sentence1', 'sentence2']),\n",
     "    \"qnli\": TaskConfig(\"two\", \"binary\", 768*2, ['question', 'sentence']),\n",
     "    \"wnli\": TaskConfig(\"two\", \"binary\", 768*2, ['sentence1', 'sentence2']),\n",
+    "    \"rte\": TaskConfig(\"two\", \"binary\", 768*2, ['sentence1', 'sentence2']),\n",
+    "    \"qqp\": TaskConfig(\"two\", \"binary\", 768*2, ['question1', 'question2']),\n",
     "}\n",
     "\n",
-    "current_task = \"qnli\"\n",
+    "current_task = \"cola\"\n",
     "current_task_config = task_configs[current_task]"
    ]
   },
@@ -201,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -209,21 +221,21 @@
       "text/plain": [
        "DatasetDict({\n",
        "    train: Dataset({\n",
-       "        features: ['question', 'sentence', 'label', 'idx'],\n",
-       "        num_rows: 104743\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 8551\n",
        "    })\n",
        "    validation: Dataset({\n",
-       "        features: ['question', 'sentence', 'label', 'idx'],\n",
-       "        num_rows: 5463\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 1043\n",
        "    })\n",
        "    test: Dataset({\n",
-       "        features: ['question', 'sentence', 'label', 'idx'],\n",
-       "        num_rows: 5463\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 1063\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,14 +471,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "size of X_train: 104743\n"
+      "size of X_train: 8551\n"
      ]
     }
    ],
@@ -506,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -549,14 +561,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saving results to ./output/val_results_qnli_20231119_162009.csv\n"
+      "saving results to ./output/val_results_cola_20231127_144951.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Best Acc: 0.75197, Last test: 0.73293: 100%|██████████| 54/54 [17:15<00:00, 19.18s/it]\n"
+      "Best Acc: 0.71237, Last test: 0.66635: 100%|██████████| 54/54 [00:50<00:00,  1.06it/s]\n"
      ]
     }
    ],
@@ -614,39 +626,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best accuracy: 0.87041\n",
-      "         mcc        f1  accuracy  num_epochs  batch_size  learning_rate  \\\n",
-      "9   0.741210  0.870857  0.870413          50          32          0.001   \n",
-      "11  0.740729  0.872891  0.870413          50          32          0.001   \n",
-      "30  0.741689  0.876232  0.870413          50         128          0.001   \n",
-      "47  0.740729  0.872891  0.870413          50         512          0.001   \n",
+      "Best mcc: 0.21718\n",
+      "        mcc        f1  accuracy  num_epochs  batch_size  learning_rate  \\\n",
+      "15  0.21718  0.784727  0.686481          50          32          0.001   \n",
       "\n",
       "   category   norm  input_size  layer_size  num_layers  weight_decay  \\\n",
-      "9         C  False         768         768           1        0.0100   \n",
-      "11        C  False         768         768           1        0.0001   \n",
-      "30        C  False         768         768           2        0.0100   \n",
-      "47        C  False         768         768           1        0.0001   \n",
+      "15        C  False         768         768           3          0.01   \n",
       "\n",
       "    patience  min_delta  device  \n",
-      "9          3          0  cuda:0  \n",
-      "11         3          0  cuda:0  \n",
-      "30         3          0  cuda:0  \n",
-      "47         3          0  cuda:0  \n"
+      "15         3          0  cuda:0  \n"
      ]
     }
    ],
    "source": [
     "# results_df = pd.read_csv(results_filename)\n",
-    "results_df = pd.read_csv(\"output/val_results_sst2_20231119_155630.csv\")\n",
+    "results_df = pd.read_csv(\"output/val_results_cola_20231127_144951.csv\")\n",
     "\n",
-    "metric = \"accuracy\"\n",
+    "metric = \"mcc\"\n",
     "best = results_df[metric].max()\n",
     "best_row = results_df[results_df[metric] == best]\n",
     "print(f\"Best {metric}: {best:.5f}\")\n",
