glue task config

--- a/fast/all_tasks.ipynb
+++ b/fast/all_tasks.ipynb
@@ -177,11 +177,16 @@
     "    \"cola\": TaskConfig(\"one\", \"binary\", 768, ['sentence']),\n",
     "    \"sst2\": TaskConfig(\"one\", \"binary\", 768, ['sentence']),\n",
     "    \"mrpc\": TaskConfig(\"two\", \"binary\", 768*2, ['sentence1', 'sentence2']),\n",
+    "    \"stsb\": TaskConfig(\"two\", \"regression\", 768*2, ['sentence1', 'sentence2']),\n",
+    "    \"qqp\": TaskConfig(\"two\", \"binary\", 768*2, ['question1', 'question2']),\n",
+    "    \"mnli-m\": TaskConfig(\"two\", \"multi\", 768*2, ['premise', 'hypothesis']),\n",
+    "    \"mnli-mm\": TaskConfig(\"two\", \"multi\", 768*2, ['premise', 'hypothesis']),\n",
     "    \"qnli\": TaskConfig(\"two\", \"binary\", 768*2, ['question', 'sentence']),\n",
+    "    \"rte\": TaskConfig(\"two\", \"binary\", 768*2, ['premise', 'hypothesis']),\n",
     "    \"wnli\": TaskConfig(\"two\", \"binary\", 768*2, ['sentence1', 'sentence2']),\n",
     "}\n",
     "\n",
-    "current_task = \"qnli\"\n",
+    "current_task = \"mnli-m\"\n",
     "current_task_config = task_configs[current_task]"
    ]
   },
