mean pooling fixed (still memory issues)

--- a/fast/all_tasks.ipynb
+++ b/fast/all_tasks.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "# REQUIRED IMPORTS & SETUP\n",
     "\n",
@@ -54,7 +62,7 @@
     "# Set Device ##########################################################\n",
     "device_name = \"cpu\"  # default device is CPU\n",
     "if torch.cuda.is_available():\n",
-    "    device_name = \"cuda:0\"  # CUDA for NVIDIA GPU\n",
+    "    device_name = \"cuda\"  # CUDA for NVIDIA GPU\n",
     "elif torch.backends.mps.is_available():\n",
     "    device_name = torch.device(\"mps\")  # Metal Performance Shaders for Apple M-series GPU\n",
     "device = torch.device(device_name)\n",
@@ -104,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.layer_norm.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.weight', 'lm_head.bias', 'lm_head.dense.bias']\n",
+      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.layer_norm.weight', 'lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.bias', 'lm_head.layer_norm.bias']\n",
       "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -173,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +201,7 @@
     "    \"qqp\": TaskConfig(\"two\", \"binary\", 768*2, ['question1', 'question2']),\n",
     "}\n",
     "\n",
-    "current_task = \"cola\"\n",
+    "current_task = \"sst2\"\n",
     "current_task_config = task_configs[current_task]"
    ]
   },
@@ -206,9 +214,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 67349\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 872\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 1821\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = load_dataset(\"glue\", current_task)\n",
     "data"
@@ -353,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,14 +408,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "X_train_saved_mask = X_train['attention_mask'].to(device)\n",
+    "X_val_saved_mask = X_val['attention_mask'].to(device)\n",
+    "X_test_saved_mask = X_test['attention_mask'].to(device)\n",
+    "\n",
+    "X_train.to(device)\n",
+    "X_val.to(device)\n",
+    "X_test.to(device)\n",
+    "\n",
     "with torch.no_grad():\n",
     "    X_train = model(**X_train)\n",
     "    X_val = model(**X_val)\n",
     "    X_test = model(**X_test)\n",
     "\n",
-    "X_train = mean_pooling(X_train, X_train['attention_mask'])\n",
-    "X_val = mean_pooling(X_val, X_val['attention_mask'])\n",
-    "X_test = mean_pooling(X_test, X_test['attention_mask'])"
+    "X_train = mean_pooling(X_train, X_train_saved_mask)\n",
+    "X_val = mean_pooling(X_val, X_val_saved_mask)\n",
+    "X_test = mean_pooling(X_test, X_test_saved_mask)"
    ]
   },
   {
@@ -416,7 +456,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size of X_train: 8551\n"
+     ]
+    }
+   ],
    "source": [
     "model = \"distilroberta\"  # rename to model name\n",
     "dataset = \"cola\"         # rename to dataset name\n",
@@ -564,9 +612,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54 hyperparameter combinations\n"
+     ]
+    }
+   ],
    "source": [
     "param_grid = {\n",
     "    'num_epochs': [50],\n",
@@ -590,18 +646,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving results to ./output/val_results_mp_sst2_20231127_152129.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/54 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "expected np.ndarray (got BatchEncoding)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/jnb5885/projectx/fast/all_tasks.ipynb Cell 45\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/all_tasks.ipynb#Y152sdnNjb2RlLXJlbW90ZQ%3D%3D?line=23'>24</a>\u001b[0m feed_forward \u001b[39m=\u001b[39m FeedForward(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/all_tasks.ipynb#Y152sdnNjb2RlLXJlbW90ZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39m# Print stats to console\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/all_tasks.ipynb#Y152sdnNjb2RlLXJlbW90ZQ%3D%3D?line=26'>27</a>\u001b[0m epoch, val_loss, val_accuracy, val_f1, val_mcc \u001b[39m=\u001b[39m feed_forward\u001b[39m.\u001b[39;49mfit(X_train, Y_train, X_val, Y_val)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/all_tasks.ipynb#Y152sdnNjb2RlLXJlbW90ZQ%3D%3D?line=28'>29</a>\u001b[0m best_acc \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(best_acc, val_accuracy)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/all_tasks.ipynb#Y152sdnNjb2RlLXJlbW90ZQ%3D%3D?line=29'>30</a>\u001b[0m bar\u001b[39m.\u001b[39mset_description(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mBest Acc: \u001b[39m\u001b[39m{\u001b[39;00mbest_acc\u001b[39m:\u001b[39;00m\u001b[39m.5f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, Last test: \u001b[39m\u001b[39m{\u001b[39;00mval_accuracy\u001b[39m:\u001b[39;00m\u001b[39m.5f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/projectx/fast/utils/feed_forward.py:213\u001b[0m, in \u001b[0;36mFeedForward.fit\u001b[0;34m(self, X, y, X_val, y_val)\u001b[0m\n\u001b[1;32m    209\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstopper \u001b[39m=\u001b[39m EarlyStopper(\n\u001b[1;32m    210\u001b[0m         patience\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpatience, min_delta\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmin_delta)\n\u001b[1;32m    212\u001b[0m \u001b[39m# Run the training loop\u001b[39;00m\n\u001b[0;32m--> 213\u001b[0m trainloader \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mutils\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mDataLoader(Data(\n\u001b[1;32m    214\u001b[0m     X, y), batch_size\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbatch_size, shuffle\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, num_workers\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, drop_last\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m    215\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_epochs):\n\u001b[1;32m    216\u001b[0m \n\u001b[1;32m    217\u001b[0m     \u001b[39m# Set current loss value\u001b[39;00m\n\u001b[1;32m    218\u001b[0m     current_loss \u001b[39m=\u001b[39m \u001b[39m0.0\u001b[39m\n",
+      "File \u001b[0;32m~/projectx/fast/utils/feed_forward.py:56\u001b[0m, in \u001b[0;36mData.__init__\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     52\u001b[0m \u001b[39mX: features data\u001b[39;00m\n\u001b[1;32m     53\u001b[0m \u001b[39my: target/output data\u001b[39;00m\n\u001b[1;32m     54\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     55\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m torch\u001b[39m.\u001b[39mis_tensor(X) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m torch\u001b[39m.\u001b[39mis_tensor(y):\n\u001b[0;32m---> 56\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mX \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mfrom_numpy(X)\n\u001b[1;32m     57\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mfrom_numpy(y)\n",
+      "\u001b[0;31mTypeError\u001b[0m: expected np.ndarray (got BatchEncoding)"
+     ]
+    }
+   ],
    "source": [
+    "# for output file name\n",
+    "embedding_type = \"meanpool\"\n",
+    "\n",
     "# setup for logging\n",
     "save_file_id = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
     "console_output_filename = f'./output/{current_task}_console_output.txt'\n",
     "with open(console_output_filename, 'a') as logfile:\n",
     "    logfile.write('\\n\\nBEGIN TRAINING LOOP\\n\\n')\n",
-    "results_filename = f'./output/val_results_{current_task}_{save_file_id}.csv'\n",
+    "results_filename = f'./output/val_results_{embedding_type}_{current_task}_{save_file_id}.csv'\n",
     "with open(results_filename, 'w', newline='') as csvfile:\n",
     "    writer = csv.writer(csvfile)\n",
     "    headers = list(all_params[0].keys())\n",
@@ -649,12 +736,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best mcc: 0.52001\n",
+      "         mcc        f1  accuracy  num_epochs  batch_size  learning_rate  \\\n",
+      "31  0.520013  0.863424  0.803452          50         128          0.001   \n",
+      "\n",
+      "   category   norm  input_size  layer_size  num_layers  weight_decay  \\\n",
+      "31        C  False         768         768           2         0.001   \n",
+      "\n",
+      "    patience  min_delta device  \n",
+      "31         3          0   cuda  \n"
+     ]
+    }
+   ],
    "source": [
     "# results_df = pd.read_csv(results_filename)\n",
-    "results_df = pd.read_csv(\"output/val_results_cola_20231127_144951.csv\")\n",
+    "results_df = pd.read_csv(\"output/val_results_cola_20231127_151717.csv\")\n",
     "\n",
     "metric = \"mcc\"\n",
     "best = results_df[metric].max()\n",
